# zero2prod

./: Cargo.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
