[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
config = "0.15.8"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]

[dev-dependencies]
reqwest = "0.12"
